# nemo-feedback

./: .gitattributes  CMakeLists.txt  README.md  README.rst
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ci/: CMakeLists.txt  Dockerfile  build.sh
src/: CMakeLists.txt
src/mains/: CMakeLists.txt  orcamodelwriterHofX.cc
src/nemo-feedback/: CMakeLists.txt  NemoFeedback.cc  NemoFeedback.h  NemoFeedbackDataCreator.cc  NemoFeedbackDataCreator.h  NemoFeedbackParameterTraitsOutputDtype.cc  NemoFeedbackParameterTraitsOutputDtype.h  NemoFeedbackParameters.h  NemoFeedbackReduce.cc  NemoFeedbackReduce.h  NemoFeedbackWriter.cc  NemoFeedbackWriter.h  instantiateObsFilterFactory.h
src/nemo-feedback/feedback_io/: Data.cc  Data.h  DataIndexer.cc  DataIndexer.h  Utils.cc  Utils.h  Writer.cc  Writer.h
src/tests/: CMakeLists.txt
src/tests/Data/: CMakeLists.txt  hofx_potm_obs.nc  hofx_prof_2var_obs.nc  hofx_sic_obs.nc  hofx_two_vars_obs.nc  test_hofx3d_nc_prof_2vars_writer_geovals.nc  test_hofx_profiles_writer_geovals.nc  test_hofx_sic_writer_geovals.nc  test_hofx_two_vars_writer_geovals.nc
src/tests/mains/: CMakeLists.txt  TestObsFilters.cc  compare_nc_cdl.sh
src/tests/nemo-feedback/: CMakeLists.txt  test_feedback_data.cc  test_feedback_writer.cc
src/tests/testinput/: CMakeLists.txt  hofx_profiles_2var_writer.yaml  hofx_profiles_writer.yaml  hofx_sic_writer.yaml  hofx_two_vars_writer.yaml  seaice_obs_writer.yaml
src/tests/testoutput/: CMakeLists.txt  test_hofx3d_nc_prof_2vars_writer_out_ref.cdl  test_hofx_feedback_writer.ref  test_hofx_feedback_writer_out_ref.cdl  test_hofx_profiles_writer.ref  test_hofx_profiles_writer_out_ref.cdl  test_hofx_sic_writer_out_ref.cdl  test_hofx_two_vars_writer.ref  test_hofx_two_vars_writer_out_ref.cdl
